# Refinery

./: .env  .env.example  .env.template  .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  CHANGELOG.md  CHAT_INTERFACE_README.md  CHUNKED_STAGE1_IMPLEMENTATION.md  CLAUDE_INTEGRATION_PLAN.md  CONTEXT_PERSISTENCE.md  CONTEXT_USAGE.md  CONTRIBUTING.md  FullWriteup.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  OAI_guide.md  PoCPart1.md  README.md  RELEASE.md  SECURITY.md  STAGED_ANALYSIS_STATUS.md  STREAMLIT_UI_IMPLEMENTATION_PLAN.md  TESTING_WORKFLOW.md  UPDATED_IMPLEMENTATION_PLAN.md  agent_manifest_example.json  check_trace_tokens.py  chunked_analysis_full_log.txt  conversation_analysis_log.txt  debug_batch_probes.py  debug_batch_request.json  debug_batch_tokens.py  debug_llm_messages.py  debug_request.py  debug_response_structure.py  debug_trace_structure.py  opai.md  pyproject.toml  refactor.md  (+13 more)
.streamlit/: config.toml
docs/: ARCHITECTURE.md  github_launch_copy.md  langfuse-testing-results.md
examples/: README.md  agent_parser_demo.py  chat_interface_demo.py  code_manager_demo.py  demo_trace.json  simple_code_reader_demo.py
refinery/: __init__.py  cli.py
refinery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
schema/: README.md  hypothesis-pack-v1.yaml
scripts/: replay_trace.py  validate_schema.py
tests/: README_LANGFUSE_EXTRACTOR.md  conftest.py  test_async_helpers.py  test_cli_smoke_langfuse.py  test_config_validation.py  test_error_scenarios.py  test_hypothesis_pack_schema.py  test_langfuse_client.py  test_langfuse_error_scenarios.py  test_langfuse_parser.py  test_langfuse_performance.py  test_langfuse_prompt_extractor.py  test_langfuse_prompt_extractor_integration.py  test_local_file_provider.py  test_multi_strategy_prompt_extractor.py  test_otlp_integration.py  test_otlp_parser.py  test_otlp_prompt_extractor.py  (+4 more)
(+77 files in other folders)
